  - #3123 Installer overly restricts account names
  - #3179 Ability to show when news items were last updated
  - #3189 check if udt exists
  - #3190 Error with link rel="canonical"
  - #3257 Non-admin users can create admin users
  - Drop all assign_by_ref in Installer
  - Missing $frontendlang in siteprefs, thanks to jce76350

- Feature Requests:
  - #2605 adding a 'forgot password' submission on the login panel  
  - #3048 News: Only show expiration-date when checkbox is set
  
- Core additions:
  - Ability to set a page as the 404 error page.  Replaces
    the existing custom 404 stuff to allow for more
    flexibility.

- News 
  - #2620 Extra fields are not displayed in the print template
  - #3163 Typo in News module
  - #3277 Drafts are not saved properly in News 2.9.3

- Libs Updates: 
  - Smarty
  - xAjax 0.5
  - script.aculo.us 1.8.2 (included  Update to Prototype 1.6.0.3)




Version 1.5.3 - Arecibo
-----------------------------
- Fixes of several bugs:
  - #2516 Javascript script errors in admin listcontent.php panel.
  - #2706 CreatePagination() does not include Session Key. 
  - #2915 Typo in multicontent.php throwing errors.
  - #2925 User not exist in sample content.
  - #2940 Field-length dateformat in UserPrefs shorter than in GlobaSettings.
  - #2995 Group assignments bug.
  - #2996 Language string missing.
  
  - Notice error in modform.inc.php.  
  - Fixed a minor permission issue on editpref.php.
  - Added an option to disable the wysiwyg for a content-page.    
  - Fixed (hopefully) problem with pseudo-random logouts when there is inactivity in the admin section.
  - Put 'canonical' logic in the default templates. 
  - Made 'NCleanGrey' the default theme, in an install without default content installed as well.

- Search 1.5.3
  - #3034 Searching for words in the footer expose all pagenames on my site.
  - Now remove event handlers when uninstalling the module